assignment1/target/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'boolean'", "'integer'", "'int'", 
                     "'float'", "'string'", "'array'", "'break'", "'do'", 
                     "'else'", "'if'", "'function'", "'for'", "'false'", 
                     "'return'", "'true'", "'void'", "'continue'", "'out'", 
                     "'while'", "'of'", "'inherit'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "'.'", "';'", "':'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'!='", "'=='", "'<'", "'>'", "'>='", "'<='", "'::'" ]

    symbolicNames = [ "<INVALID>", "INT_LIT", "FLOAT_LIT", "BOOLEAN_LIT", 
                      "STRING_LIT", "AUTO", "BOOLEAN", "INTEGER", "INT", 
                      "FLOAT", "STRING", "ARRAY", "BREAK", "DO", "ELSE", 
                      "IF", "FUNCTION", "FOR", "FALSE", "RETURN", "TRUE", 
                      "VOID", "CONTINUE", "OUT", "WHILE", "OF", "INHERIT", 
                      "LP", "RP", "LCB", "RCB", "LSB", "RSB", "COMMA", "DOT", 
                      "SEMI", "COLON", "ASSIGN", "ADD", "MINUS", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "NOT_EQ", "EQUAL", 
                      "LESS_THAN", "GREATER_THAN", "GT_EQ", "LT_EQ", "SCOPE_OP", 
                      "ID", "BLOCK_COMMENT", "SINGLE_LINE_COMMENT", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_program_init = 1
    RULE_funcdecl = 2
    RULE_return_type = 3
    RULE_param_list = 4
    RULE_param = 5
    RULE_body = 6
    RULE_vardecl = 7
    RULE_id_list = 8
    RULE_type_decl = 9
    RULE_non_auto_type_decl = 10
    RULE_int_type = 11
    RULE_float_type = 12
    RULE_boolean_type = 13
    RULE_string_type = 14
    RULE_array_type = 15
    RULE_dimensions = 16
    RULE_element_type = 17
    RULE_void_type = 18
    RULE_auto_type = 19
    RULE_array_lit = 20
    RULE_stat = 21
    RULE_assign_stat = 22
    RULE_if_stat = 23
    RULE_if_part = 24
    RULE_else_part = 25
    RULE_for_stat = 26
    RULE_scalar_var = 27
    RULE_init_expr = 28
    RULE_condition_expr = 29
    RULE_update_expr = 30
    RULE_while_stat = 31
    RULE_do_while_stat = 32
    RULE_break_stat = 33
    RULE_continue_stat = 34
    RULE_return_stat = 35
    RULE_call_stat = 36
    RULE_func_name = 37
    RULE_call_stat_exprs = 38
    RULE_block_stat = 39
    RULE_body_block_stat = 40
    RULE_expr_list_for_valdecl = 41
    RULE_expr_list = 42
    RULE_expr = 43
    RULE_expr1 = 44
    RULE_expr2 = 45
    RULE_expr3 = 46
    RULE_expr4 = 47
    RULE_expr5 = 48
    RULE_expr6 = 49
    RULE_expr7 = 50
    RULE_expr8 = 51
    RULE_func_call = 52
    RULE_operands = 53
    RULE_index_op = 54

    ruleNames =  [ "program", "program_init", "funcdecl", "return_type", 
                   "param_list", "param", "body", "vardecl", "id_list", 
                   "type_decl", "non_auto_type_decl", "int_type", "float_type", 
                   "boolean_type", "string_type", "array_type", "dimensions", 
                   "element_type", "void_type", "auto_type", "array_lit", 
                   "stat", "assign_stat", "if_stat", "if_part", "else_part", 
                   "for_stat", "scalar_var", "init_expr", "condition_expr", 
                   "update_expr", "while_stat", "do_while_stat", "break_stat", 
                   "continue_stat", "return_stat", "call_stat", "func_name", 
                   "call_stat_exprs", "block_stat", "body_block_stat", "expr_list_for_valdecl", 
                   "expr_list", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "func_call", "operands", 
                   "index_op" ]

    EOF = Token.EOF
    INT_LIT=1
    FLOAT_LIT=2
    BOOLEAN_LIT=3
    STRING_LIT=4
    AUTO=5
    BOOLEAN=6
    INTEGER=7
    INT=8
    FLOAT=9
    STRING=10
    ARRAY=11
    BREAK=12
    DO=13
    ELSE=14
    IF=15
    FUNCTION=16
    FOR=17
    FALSE=18
    RETURN=19
    TRUE=20
    VOID=21
    CONTINUE=22
    OUT=23
    WHILE=24
    OF=25
    INHERIT=26
    LP=27
    RP=28
    LCB=29
    RCB=30
    LSB=31
    RSB=32
    COMMA=33
    DOT=34
    SEMI=35
    COLON=36
    ASSIGN=37
    ADD=38
    MINUS=39
    MUL=40
    DIV=41
    MOD=42
    NOT=43
    AND=44
    OR=45
    NOT_EQ=46
    EQUAL=47
    LESS_THAN=48
    GREATER_THAN=49
    GT_EQ=50
    LT_EQ=51
    SCOPE_OP=52
    ID=53
    BLOCK_COMMENT=54
    SINGLE_LINE_COMMENT=55
    WS=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    @property
    def size_id(self):
        try:
            return self._size_id
        except AttributeError:
            self._size_id = 0
            return self._size_id

    @property
    def size_expr(self):
        try:
            return self._size_expr
        except AttributeError:
            self._size_expr = 0
            return self._size_expr

    @size_id.setter
    def size_id(self, value):
        self._size_id = value

    @size_expr.setter
    def size_expr(self, value):
        self._size_expr = value



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_init(self):
            return self.getTypedRuleContext(MT22Parser.Program_initContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.program_init()
            self.state = 111
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_init(self):
            return self.getTypedRuleContext(MT22Parser.Program_initContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_init" ):
                return visitor.visitProgram_init(self)
            else:
                return visitor.visitChildren(self)




    def program_init(self):

        localctx = MT22Parser.Program_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_init)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 114
                    self.funcdecl()
                    pass


                self.state = 117
                self.program_init()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 119
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 120
                    self.funcdecl()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_name(self):
            return self.getTypedRuleContext(MT22Parser.Func_nameContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def return_type(self):
            return self.getTypedRuleContext(MT22Parser.Return_typeContext,0)


        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.func_name()
            self.state = 126
            self.match(MT22Parser.COLON)
            self.state = 127
            self.match(MT22Parser.FUNCTION)
            self.state = 128
            self.return_type()
            self.state = 129
            self.match(MT22Parser.LP)
            self.state = 130
            self.param_list()
            self.state = 131
            self.match(MT22Parser.RP)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 132
                self.match(MT22Parser.INHERIT)
                self.state = 133
                self.match(MT22Parser.ID)


            self.state = 136
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def int_type(self):
            return self.getTypedRuleContext(MT22Parser.Int_typeContext,0)


        def float_type(self):
            return self.getTypedRuleContext(MT22Parser.Float_typeContext,0)


        def boolean_type(self):
            return self.getTypedRuleContext(MT22Parser.Boolean_typeContext,0)


        def string_type(self):
            return self.getTypedRuleContext(MT22Parser.String_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typeContext,0)


        def void_type(self):
            return self.getTypedRuleContext(MT22Parser.Void_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_return_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = MT22Parser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_return_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER, MT22Parser.INT]:
                self.state = 138
                self.int_type()
                pass
            elif token in [MT22Parser.FLOAT]:
                self.state = 139
                self.float_type()
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.state = 140
                self.boolean_type()
                pass
            elif token in [MT22Parser.STRING]:
                self.state = 141
                self.string_type()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 142
                self.array_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 143
                self.auto_type()
                pass
            elif token in [MT22Parser.VOID]:
                self.state = 144
                self.void_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = MT22Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param_list)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.param()
                self.state = 148
                self.match(MT22Parser.COMMA)
                self.state = 149
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_decl(self):
            return self.getTypedRuleContext(MT22Parser.Type_declContext,0)


        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 154
                    self.match(MT22Parser.OUT)


                self.state = 157
                self.match(MT22Parser.ID)
                self.state = 158
                self.match(MT22Parser.COLON)
                self.state = 159
                self.type_decl()
                pass
            elif token in [MT22Parser.RP, MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stat(self):
            return self.getTypedRuleContext(MT22Parser.Block_statContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MT22Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.block_stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def non_auto_type_decl(self):
            return self.getTypedRuleContext(MT22Parser.Non_auto_type_declContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expr_list_for_valdecl(self):
            return self.getTypedRuleContext(MT22Parser.Expr_list_for_valdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                assign = False
                self.state = 166
                self.id_list()
                self.state = 167
                self.match(MT22Parser.COLON)
                self.state = 168
                self.non_auto_type_decl()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.ASSIGN:
                    self.state = 169
                    self.match(MT22Parser.ASSIGN)
                    self.state = 170
                    self.expr_list_for_valdecl()
                    assign = True


                self.state = 176
                self.match(MT22Parser.SEMI)

                if assign == True and self.size_id != self.size_expr:
                  print("SOMETHING WENT WRONG!!!")

                pass

            elif la_ == 2:
                self.state = 180
                self.id_list()
                self.state = 181
                self.match(MT22Parser.COLON)
                self.state = 182
                self.auto_type()
                self.state = 183
                self.match(MT22Parser.ASSIGN)
                self.state = 184
                self.expr_list_for_valdecl()
                self.state = 185
                self.match(MT22Parser.SEMI)

                if self.size_id != self.size_expr:
                  print("SOMETHING WENT WRONG!!!")

                pass



            self.size_id = 0
            self.size_expr = 0

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.match(MT22Parser.ID)
                self.size_id += 1
                self.state = 195
                self.match(MT22Parser.COMMA)
                self.state = 196
                self.id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 197
                self.match(MT22Parser.ID)
                self.size_id += 1
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def int_type(self):
            return self.getTypedRuleContext(MT22Parser.Int_typeContext,0)


        def float_type(self):
            return self.getTypedRuleContext(MT22Parser.Float_typeContext,0)


        def boolean_type(self):
            return self.getTypedRuleContext(MT22Parser.Boolean_typeContext,0)


        def string_type(self):
            return self.getTypedRuleContext(MT22Parser.String_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_type_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_decl" ):
                return visitor.visitType_decl(self)
            else:
                return visitor.visitChildren(self)




    def type_decl(self):

        localctx = MT22Parser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER, MT22Parser.INT]:
                self.state = 201
                self.int_type()
                pass
            elif token in [MT22Parser.FLOAT]:
                self.state = 202
                self.float_type()
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.state = 203
                self.boolean_type()
                pass
            elif token in [MT22Parser.STRING]:
                self.state = 204
                self.string_type()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 205
                self.array_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 206
                self.auto_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_auto_type_declContext(ParserRuleContext):
        __slots__ = 'parser'
